tests/snapshots/run_wpt_conformance__coreml_cumulativeSum_with_float16_input_and_default_options_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cumulative_sum.https.any.js",
    "cumulativeSum with float16 input and default options.",
    "coreml",
    "PASS",
)
